# CalendarToGoogle

./: .gitignore  CLAUDE.md  README.md  install_setup.bat  install_setup.command  install_startup.bat  install_startup.command  main.py  pyproject.toml  run_silent.vbs  start.bat  start.command  uninstall_startup.bat
.claude/: settings.local.json
calendar_to_google/: __init__.py  __main__.py  clipboard_monitor.py  date_parser.py  edit_dialog.py  google_calendar.py  launcher.py  launcher.pyw  tray_app.py
